@@ -397,42 +397,42 @@ Molette pour changer l&apos;offset</translation>
         <translation>&amp;Décalage</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="649"/>
+        <location filename="../lfowidget.cpp" line="650"/>
         <source>Sine</source>
         <translation>Sinus</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="649"/>
+        <location filename="../lfowidget.cpp" line="650"/>
         <source>Saw up</source>
         <translation>Scie montant</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="649"/>
+        <location filename="../lfowidget.cpp" line="650"/>
         <source>Triangle</source>
         <translation></translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="650"/>
+        <location filename="../lfowidget.cpp" line="651"/>
         <source>Saw down</source>
         <translation>Scie descendant</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="650"/>
+        <location filename="../lfowidget.cpp" line="651"/>
         <source>Square</source>
         <translation>Créneau</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="650"/>
+        <location filename="../lfowidget.cpp" line="651"/>
         <source>Custom</source>
         <translation>Libre</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="812"/>
+        <location filename="../lfowidget.cpp" line="811"/>
         <source>Delete &quot;%1&quot;?</source>
         <translation>Supprimer &quot;%1&quot;?</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="831"/>
+        <location filename="../lfowidget.cpp" line="830"/>
         <source>New Name</source>
         <translation>Nouveau nom</translation>
     </message>
@@ -1000,12 +1000,12 @@ Enregistrer les modifications?</translation>
         <translation>Véloc&amp;ité</translation>
     </message>
     <message>
-        <location filename="../seqwidget.cpp" line="865"/>
+        <location filename="../seqwidget.cpp" line="866"/>
         <source>Delete &quot;%1&quot;?</source>
         <translation>Supprimer &quot;%1&quot;?</translation>
     </message>
     <message>
-        <location filename="../seqwidget.cpp" line="884"/>
+        <location filename="../seqwidget.cpp" line="885"/>
         <source>New Name</source>
         <translation>Nouveau nom</translation>
     </message>
@@ -1158,7 +1158,7 @@ Enregistrer les modifications?</translation>
         <translation type="obsolete">Créneau</translation>
     </message>
     <message>
-        <location filename="../seqwidget.cpp" line="684"/>
+        <location filename="../seqwidget.cpp" line="685"/>
         <source>Custom</source>
         <translation>Libre</translation>
     </message>
