@@ -1,4 +1,6 @@
 2010-02-14  Frank Kober  <goemusic@yahoo.fr>
+	* lfoWidget.*, midiLfo.*, seqWidget.*, midiSeq.*: muting ranges 
+	by holding right mouse button now possible.
 	* passwidget.cpp, midicctable.cpp: Layout improved
 	* man/*/qmidiarp.1: Midiclock description updated
 
